# world-pet

./: AGENTS.md  GEMINI.md
.agent/rules/: api-best-practices.md  code-generation-guide.md  code-style-guide.md  integration.md  tech-stack.md  unit-tests.md
.agent/skills/fastapi-patterns/: SKILL.md
.agent/skills/frontend-e2e-testing/: SKILL.md
.agent/skills/frontend-unittests/: SKILL.md
.agent/workflows/: generate-unit-frontend.md  spec.md  unit-tests.md
.agents/rules/: code-generation-guide.md  code-style-guide.md  implementation-plan.md
.agents/workflows/: generate-e2e.md
.gemini/: settings.json
.gemini/agents/: architect.md  backend-implementer.md  frontend-expert.md  frontend-implementer.md  sdlc-orchestrator.md  software-designer.md  spec-manager.md
.opencode/command/: opsx-explore.md
.sdlc/context/: architecture.md  conventions.md  project-overview.md
.sdlc/templates/: requirement-template.md  task-template.md
backend/: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 74e7539b0c41_initial_users_tenants.py  add_pets_table.py  add_tenant_structure.py  f9bbc2b95323_add_is_active_and_last_login_to_user_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  router.py  schemas.py  users.py
backend/app/api/v1/endpoints/: auth.py  health.py  pets.py  tenants.py  users.py
backend/app/application/: auth_service.py
backend/app/core/: casbin_auth.py  config.py  exceptions.py  rbac.py  security.py  tenant_context.py
backend/app/crud/: crud_tenant.py  crud_user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/dependencies/: __init__.py  auth.py  tenant.py
backend/app/domain/: base.py  user.py
backend/app/infrastructure/: database.py  redis.py
backend/app/infrastructure/repositories/: base.py  user_repo.py
backend/app/models/: __init__.py  pet.py  tenant.py  user.py  user_tenant.py
backend/app/schemas/: __init__.py  auth.py  pet.py  tenant.py  user.py  user_tenant.py
backend/app/services/: __init__.py  auth_service.py  pet_service.py  s3_service.py  tenant_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: fd9239d81185_create_user_and_role_tables.py
backend/tests/: conftest.py  test_auth_dependencies.py  test_auth_endpoints.py  test_auth_integration.py  test_auth_service.py  test_health.py  test_main.py  test_multi_tenant_users.py  test_password_hashing.py  test_pet_service.py  test_s3_service.py  test_security.py  test_tenant_context.py  test_tenant_isolation.py  test_tenant_public_endpoints.py  test_tenant_service.py
backend/tests/api/v1/: test_auth.py
frontend/: .gitignore  README.md  index.html  jest.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
frontend/tests/: auth.spec.ts
(+146 files in other folders)
